src/objects/peer__Administrator_Parameters__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Protected</customSettingsVisibility>
    <fields>
        <fullName>peer__Almost_Threshold__c</fullName>
        <label>Almost Threshold</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>peer__Auction_Duration__c</fullName>
        <description>Provide the number of Days for which the Loan Application will be valid</description>
        <inlineHelpText>This is the number of days for which the loan application will be valid</inlineHelpText>
        <label>Auction Duration</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>peer__Automatic_Weights_Method__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check if Portfolio Builder should use automatic weights method</inlineHelpText>
        <label>Automatic Weights Method</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>peer__Diff_Interest_Value__c</fullName>
        <inlineHelpText>Value by which the interest rate can be lower in case of fully funded loan applications</inlineHelpText>
        <label>Diff Interest Value</label>
        <precision>5</precision>
        <required>true</required>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>peer__Maximum_Bid_Percentage__c</fullName>
        <description>Maximum Bid Percentage Out of the total Portfolio</description>
        <inlineHelpText>Maximum Bid Percentage of the total Portfolio</inlineHelpText>
        <label>Maximum Bid Percentage</label>
        <precision>5</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>peer__Maximum_Flexiblity__c</fullName>
        <label>Maximum Flexiblity</label>
        <precision>5</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>peer__Maximum_Interest_Rate__c</fullName>
        <label>Maximum Interest Rate</label>
        <precision>4</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>peer__Minimum_Amount_For_Investment__c</fullName>
        <description>The minimum Amount required to create a Portfolio</description>
        <label>Minimum Amount For Investment</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>peer__Minimum_Funding_Percentage__c</fullName>
        <description>Minimum funding percent of a Loan Request that allows the borrower to receive the current funds</description>
        <inlineHelpText>Minimum funding percent of a Loan Request that allows the borrower to receive the current funds</inlineHelpText>
        <label>Minimum Funding Percentage</label>
        <precision>5</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>peer__Portfolio_Generation_Count_Per_Day__c</fullName>
        <description>The number of times the portfolio can be build a day</description>
        <inlineHelpText>This is the number of times a portfolio can be built in a day</inlineHelpText>
        <label>Portfolio Generation Count Per Day</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>peer__Portfolio_Generation_Count_Per_Hour__c</fullName>
        <inlineHelpText>This the number of times a portfolio can be built in an hour</inlineHelpText>
        <label>Portfolio Generation Count Per Hour</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>peer__Portfolio_Valid_Time__c</fullName>
        <description>During this time the lender can choose to accept the portfolio offer,committing it and having its bids placed</description>
        <inlineHelpText>Provide value in seconds for which the portfolio remains valid</inlineHelpText>
        <label>Portfolio Valid Time</label>
        <precision>4</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Auto Portfolio Admin Parameters</label>
</CustomObject>